# jwp-pms

./: README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  init.sql
backend/: .env  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: main.py
backend/app/api/graphql/: mutations.py  queries.py  types.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: calendar.py  permission.py  project.py  task.py  user.py
backend/app/services/: auth_service.py  project_service.py  task_service.py  user_service.py
backend/app/utils/: logger.py
backend/tests/: conftest.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/common/: Header.tsx  Layout.tsx  Loading.tsx  Modal.tsx  Sidebar.tsx  Toast.tsx
frontend/src/components/projects/: CreateProjectForm.tsx  ProjectsPage.tsx
frontend/src/components/tasks/: CreateTaskForm.tsx  TaskBoard.tsx  TaskCard.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/graphql/: client.ts
frontend/src/graphql/mutations/: auth.ts  projects.ts  tasks.ts
frontend/src/graphql/queries/: auth.ts  dashboard.ts  projects.ts  tasks.ts
frontend/src/pages/: AnalyticsPage.tsx  CalendarPage.tsx  DashboardPage.tsx  SettingsPage.tsx  TeamPage.tsx
frontend/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/projects/: ProjectCard.tsx  ProjectDetailPage.tsx
frontend/src/pages/tasks/: TaskDetailPage.tsx  TasksPage.tsx
frontend/src/types/: auth.ts  calendar.ts  common.ts  dashboard.ts  form.ts  permission.ts  project.ts  task.ts  ui.ts
